Update website content

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,6 +1,6 @@
 $font-main: 'Montserrat', sans-serif;
 $font-color-main: #02001b;
-$background-color: #eee;
+$background-color: #832;
 $max-width-main: 1200px;
 
 * {
