Change website background color

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
   font-family: "Montserrat", sans-serif; }
 
 body {
-  background-color: #eee;
+  background-color: #848;
   color: #02001b; }
 
 .container {
